--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,7 @@
         <module>keycloak-sms-provider-aliyun</module>
         <module>keycloak-sms-provider-tencent</module>
         <module>keycloak-sms-provider-twofactorapi</module>
+        <module>keycloak-sms-provider-telegram</module>
     </modules>
 
     <dependencies>
